--- a/src/main/resources/com/xg7plugins/booter/log.fxml
+++ b/src/main/resources/com/xg7plugins/booter/log.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<?import javafx.scene.text.TextFlow?>
+<VBox alignment="CENTER" spacing="15.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <Label>Console:</Label>
+    <ScrollPane>
+        <TextFlow fx:id="logs" prefHeight="271.0" prefWidth="491.0">
 
-</AnchorPane>
+        </TextFlow>
+    </ScrollPane>
+    <Label>Comandos:</Label>
+    <TextArea fx:id="comandos" prefHeight="2.0" prefWidth="491.0">
+
+    </TextArea>
+
+</VBox>
